  * Add a cleanup routine for profiles affected by a 2.2 defaults bug:
    https://mail1.eff.org/pipermail/https-everywhere/2012-August/001511.html
  * Make Decentralized SSL Observatory-Tor interactions saner in the wake of
    Torbutton transitioning to "always on" (we now detect a local Tor instance
    on port 9050 and use it)
    https://trac.torproject.org/projects/tor/ticket/6541
  * Disable broken/buggy rulesets: Voxel, Mapquest, Imgur, Justin.tv,
    F-Secure, Valve, SpringFiles, openDesktop, syllabushare, Playboy, FAZ
  * Fixes / Improvements: Eloqua, OpenDNS, Mashable, News Corp, Sony, Yahoo!,
    Examiner.com, FBI, Adtechus, Mozilla, Dreamhost, Lenovo / Thinkpad, Pirate
    Party, Scribd
  * New Czech translation

3.0development.6                            (2012-08-16)
  * Prevent ruleset bugs from crashing the UI
    https://trac.torproject.org/projects/tor/ticket/6280
  * Fix a lack-of-translation bug in the context menu
    https://trac.torproject.org/projects/tor/ticket/6516
    (although coverage will probably be patchy for a while)
  * Add hooks to use our new Firefox internal rewrite API, if the browser
    has it (this should address
      https://trac.torproject.org/projects/tor/ticket/5477
      https://trac.torproject.org/projects/tor/ticket/3190
      )
  * Fixes: OpenStreetMap, Okcupid, Yandex, Valve, Atlantic Media, AWS,
           XDA developers, Tumblr, MetaPress, Mixpanel, VideoLAN, JBoss,
           Yourhosting, Pypi, QT, Imgur, Scientific American,
           Chronicle, ISOC, Wikimedia, Xmission, Tumblr, OpenDNS
           Mobygames, Telegraph Media, Dailymotion, RFC-editor, US gov,
           Discogs, Costco, Brightcove, PirateParty, BrownPaperTickets
  * Improvements: Apple, MIT
  * Disable buggy/broken: ZDNet, Globe and Mail, Malwarebytes, Plenty of Fish,
                          Raymond.CC, Blip.tv, Governo Portugês, adf.ly,
                          McAfee :( :( :(