@@ -5,6 +5,7 @@
     Torbutton transitioning to "always on" (we now detect a local Tor instance
     on port 9050 and use it)
     https://trac.torproject.org/projects/tor/ticket/6541
+  * Fix some other bugs in the Observatory proxy-wrangling code
   * Disable broken/buggy rulesets: Voxel, Mapquest, Imgur, Justin.tv,
     F-Secure, Valve, SpringFiles, openDesktop, syllabushare, Playboy, FAZ
   * Fixes / Improvements: Eloqua, OpenDNS, Mashable, News Corp, Sony, Yahoo!,
